<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manu_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/manu_background"
    tools:context=".spaceGame.activities.ManuActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_ET_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/welcome_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/list_ET_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textColorHint="#EBE7EC"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/main_ET_welcome"
        app:layout_constraintStart_toStartOf="@id/main_ET_welcome"
        app:layout_constraintTop_toBottomOf="@id/main_ET_welcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/button_purple"
        android:textColor="@color/white"
        android:text="@string/start_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_ET_welcome" />


    <LinearLayout
        android:id="@+id/main_LL_speedOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/main_BTN_startGame"
        app:layout_constraintStart_toStartOf="@id/main_BTN_startGame"
        app:layout_constraintTop_toBottomOf="@id/main_BTN_startGame">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_fast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/fast_txt"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_pink"
            app:cornerRadius="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_slow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/slow_txt"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_pink"
            app:cornerRadius="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_LL_gameModeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/main_TV_gameMode"
        app:layout_constraintStart_toStartOf="@id/main_TV_gameMode"
        app:layout_constraintTop_toBottomOf="@id/main_TV_gameMode">

        <TextView
            android:id="@+id/main_TV_gameModeButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttons_txt"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/main_TGL_gameMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_TV_gameModeButtons"
            app:layout_constraintTop_toTopOf="@+id/main_TV_gameModeButtons"
            app:useMaterialThemeColors="false" />

        <TextView
            android:id="@+id/main_TV_gameModeSensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_txt"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_TV_gameMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/mode_txt"
        android:textAlignment="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/main_LL_speedOptions"
        app:layout_constraintStart_toStartOf="@id/main_LL_speedOptions"
        app:layout_constraintTop_toBottomOf="@id/main_LL_speedOptions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_highScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/button_purple"
        android:textColor="@color/white"
        android:text="@string/high_scores_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_TV_gameMode" />

</androidx.constraintlayout.widget.ConstraintLayout>