<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    android:layout_margin="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/pink_pale"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/score_LBL_rank"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/player_rank"
            android:gravity="center"
            android:textColor="@color/light_salmon"
            android:textSize="50sp"
            android:textStyle="bold" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/score_LBL_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/score_LBL_rank"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:minLines="1"
            android:text="@string/player_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/light_red"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/score_LBL_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_LBL_name"
            android:layout_toEndOf="@id/score_LBL_rank"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:text="@string/player_score"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/light_red"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>