<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbackground"
    android:layoutDirection="ltr"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/points_view"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:text="@string/score_000"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:elevation="10dp"
        tools:ignore="RtlSymmetry,TextSizeCheck,VisualLintOverlap" />

    <LinearLayout
        android:id="@+id/life_layout"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_gravity="end|top"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:elevation="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/health1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/space_health" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/health2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/space_health" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/health3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/space_health" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/road"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="9"
        android:columnCount="3"
        android:layout_marginTop="40dp">

        <!--row1-->
        <ImageView
            android:id="@+id/alien00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null" />

        <ImageView
            android:id="@+id/alien01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien02"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <!--row2-->
        <ImageView
            android:id="@+id/alien10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <!--row3-->
        <ImageView
            android:id="@+id/alien20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien21"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien22"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <!--row4-->
        <ImageView
            android:id="@+id/alien30"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien31"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien32"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <!--row5-->
        <ImageView
            android:id="@+id/alien40"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien41"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien42"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <!--row6-->
        <ImageView
            android:id="@+id/alien50"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien51"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien52"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <!--row7-->
        <ImageView
            android:id="@+id/alien60"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien61"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/alien62"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:src="@drawable/alien"
            android:contentDescription="@null"/>

        <!--row8 - buttons-->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="8"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/left"
            tools:ignore="RedundantDescriptionCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/left_button" />

        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="8"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/right"
            tools:ignore="RedundantDescriptionCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/right_button"/>
    </GridLayout>


    <GridLayout
        android:id="@+id/road2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:rowCount="1"
        android:columnCount="3"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="30dp">

        <!--player row-->
        <ImageView
            android:id="@+id/ship_mid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/spaceship_player"
            android:rotation="180"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/ship_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/spaceship_player"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/ship_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/spaceship_player"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:contentDescription="@null"/>

    </GridLayout>

</RelativeLayout >